# mxl-base

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml  justfile  setup.py
.github/workflows/: check.yml
i18n/en/: mxl_base.ftl
src/: lib.rs  localization.rs  logging.rs  misc.rs  proc_dir.rs  third_party_licenses.rs
